--- a/welcome.html
+++ b/welcome.html
@@ -14,9 +14,13 @@
         <span>
             <h3>Please Select a Language</h3>
         </span>
-        <div>
-            <button type="submit">English</button>
-            <button type="submit">Japanese</button>
+        <div class="forms">
+            <form action="index.html">
+                <button type="submit">English</button>
+            </form>
+            <form action="jp_index.html">
+                <button type="submit">Japanese</button>
+            </form>
         </div>
     </header>
 
