--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 
+    <!-- CSS -->
     <link rel="stylesheet" href="css/index_eng.css">
+
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
     
-    <header>
-        <h1>Portfolio</h1>
-    </header>
+    <nav class="top_nav">
+        <ul>
+            <li><a href="">Joharry Sanchez</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Work</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
 
 </body>
 </html>
