--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/index_eng.css">
+    <link rel="stylesheet" href="../css/index_eng.css">
 
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,14 +17,22 @@
 <body>
     
     <nav class="top_nav">
-        <ul>
-            <li><a href="">Joharry Sanchez</a></li>
-            <li><a href="">Home</a></li>
+        <ul id="home">
+            <li>Joharry Sanchez</li>
+            <li><a href="#home">Home</a></li>
             <li><a href="">Work</a></li>
             <li><a href="">Skills</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
+
+    <header>
+        <div class="greetings">
+            <p>Hello</p>
+            <p>I'm Joharry Sanchez, Junior Web Developer</p>
+            <p>Based on Aichi, Japan</p>
+        </div>
+    </header>
 
 </body>
 </html>
