--- a/html/welcome.html
+++ b/html/welcome.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
 
-    <link rel="stylesheet" href="css/welcome.css">
+    <link rel="stylesheet" href="../css/welcome.css">
 </head>
 <body>
     
