--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -28,11 +29,18 @@
 
     <header>
         <div class="greetings">
-            <p>Hello</p>
+            <p>Hello!</p>
             <p>I'm Joharry Sanchez, Junior Web Developer</p>
             <p>Based on Aichi, Japan</p>
         </div>
+        <div class="personal">
+            <img src="../upload/images/profilepic.jpg" alt="profile pic" width="200px">
+            <div class="personal_information">
+                <ul>
+                    <li>Personal Information</li>
+                </ul>
+            </div>
+        </div>
     </header>
-
 </body>
 </html>
