--- a/html/index.html
+++ b/html/index.html
@@ -36,9 +36,33 @@
         <div class="personal">
             <img src="../upload/images/profilepic.jpg" alt="profile pic" width="200px">
             <div class="personal_information">
-                <ul>
-                    <li>Personal Information</li>
-                </ul>
+                <table>
+                    <th>Personal Information</th>
+                    <tr>
+                        <td>Name:</td>
+                        <td>Joharry Sanchez</td>
+                    </tr>
+                    <tr>
+                        <td>Date of birth:</td>
+                        <td>October 16, 1989</td>
+                    </tr>
+                    <tr>
+                        <td>Email:</td>
+                        <td>joharrywork@gmail.com</td>
+                    </tr>
+                    <tr>
+                        <td>Phone:</td>
+                        <td>090-9923-3642</td>
+                    </tr>
+                    <tr>
+                        <td>Address:</td>
+                        <td>Aichi Ken Inuyama Shi Kamino Gou 1489-19</td>
+                    </tr>
+                    <tr>
+                        <td>Website:</td>
+                        <td>www.github.com</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </header>
