--- a/html/index.html
+++ b/html/index.html
@@ -35,12 +35,12 @@
         </div>
         <div class="personal">
             <img src="../upload/images/profilepic.jpg" alt="profile pic" width="200px">
-            <div class="personal_information">
+            <div class="personal_info">
                 <table>
-                    <th>Personal Information</th>
+                    <th class="info_title" colspan="2">Personal Information</th>
                     <tr>
-                        <td>Name:</td>
-                        <td>Joharry Sanchez</td>
+                        <td class="info_name">Name:</td>
+                        <td class="info_answer">Joharry Sanchez</td>
                     </tr>
                     <tr>
                         <td>Date of birth:</td>
