--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,11 @@
             <p>Based on Aichi, Japan</p>
         </div>
         <div class="personal">
-            <img src="../upload/images/profilepic.jpg" alt="profile pic" width="200px">
+            <div class="personal_profile">
+                <div class="second_box"></div>
+                <img src="../upload/images/profilepic.jpg" alt="profile pic">
+                <div class="third_box"></div>
+            </div>
             <div class="personal_info">
                 <table>
                     <th class="info_title" colspan="2">Personal Information</th>
