--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,7 @@
         <ul id="home">
             <li>Joharry Sanchez</li>
             <li><a href="#home">Home</a></li>
+            <li><a href="#exp">Experience</a></li>
             <li><a href="">Work</a></li>
             <li><a href="">Skills</a></li>
             <li><a href="">Contact</a></li>
