--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,7 @@
         <ul id="home">
             <li>Joharry Sanchez</li>
             <li><a href="#home">Home</a></li>
-            <li><a href="#exp">Experience</a></li>
-            <li><a href="">Work</a></li>
+            <li><a href="#work">Work Experience</a></li>
             <li><a href="">Skills</a></li>
             <li><a href="">Contact</a></li>
         </ul>
@@ -41,11 +40,13 @@
                 <div class="third_box"></div>
             </div>
             <div class="personal_info">
+                <span>
+                    <h2>Personal Information</h2>
+                </span>
                 <table>
-                    <th class="info_title" colspan="2">Personal Information</th>
                     <tr>
-                        <td class="info_name">Name:</td>
-                        <td class="info_answer">Joharry Sanchez</td>
+                        <td>Name:</td>
+                        <td>Joharry Sanchez</td>
                     </tr>
                     <tr>
                         <td>Date of birth:</td>
@@ -71,8 +72,32 @@
             </div>
         </div>
     </header>
-    <section id="exp">
-        
+
+    <div class="line"></div>
+
+    <section id="work">
+        <div class="work_exp">
+            <span>
+                <h2>Work Experience</h2>
+            </span>
+            <!-- <table>
+                <span>
+                    <h2>Work Experience</h2>
+                </span>
+                    <tr>
+                        <td>Noda Plastic</td>
+                        <td>Lathe Processing</td>
+                    </tr>
+                    <tr>
+                        <td>Kimura Metal</td>
+                        <td>Recycle</td>
+                    </tr>
+                    <tr>
+                        <td>Part Time Jobs</td>
+                        <td>Pachinko Company</td>
+                    </tr>
+            </table> -->
+        </div>
     </section>
 </body>
 </html>
