--- a/html/index.html
+++ b/html/index.html
@@ -80,6 +80,17 @@
             <span>
                 <h2>Work Experience</h2>
             </span>
+            <div class="first_container">
+                <div class="company">
+                    <h3>Noda Plastic Seiko</h3>
+                    <p>2016 July ~ Current</p>
+                </div>
+                <div class="company_business">
+                    <p></p>
+                    <p>Plastic Processing</p>
+                    <p>Aliminum Processing</p>
+                </div>
+            </div>
             <!-- <table>
                 <span>
                     <h2>Work Experience</h2>
