--- a/html/index.html
+++ b/html/index.html
@@ -81,39 +81,23 @@
                 <h2>Work Experience</h2>
             </span>
 
-            <div class="line"></div>
-
             <div class="first_container">
                 <div class="company">
                     <h3>Noda Plastic Seiko</h3>
                     <p>2016 July ~ Current</p>
                 </div>
                 <div class="company_business">
-                    <span></span>
                    <ul>
-                    <li>Plastic Cutting</li>
-                    <li>Aluminum Cutting</li>
-                    <li>Brass Cutting</li>
+                    <h3>Job Description:</h3>
+                    <li>Operation and programming of NC lathe machines</li>
+                    <li>Processing of plastic, aluminum, and brass</li>
+                    <li>Proposing and implementing improvements to the production process</li>
+                    <li>Responsible for training junior staff for 6 months as a team leader</li>
+                    <li>ntroducing new technologies to improve productivity</li>
                    </ul>
                 </div>
             </div>
-            <!-- <table>
-                <span>
-                    <h2>Work Experience</h2>
-                </span>
-                    <tr>
-                        <td>Noda Plastic</td>
-                        <td>Lathe Processing</td>
-                    </tr>
-                    <tr>
-                        <td>Kimura Metal</td>
-                        <td>Recycle</td>
-                    </tr>
-                    <tr>
-                        <td>Part Time Jobs</td>
-                        <td>Pachinko Company</td>
-                    </tr>
-            </table> -->
+        
         </div>
     </section>
 </body>
