--- a/html/index.html
+++ b/html/index.html
@@ -78,7 +78,7 @@
     <section id="work">
         <div class="work_exp">
             <span>
-                <h2>Work Experience</h2>
+                <h2>Work Experience:</h2>
             </span>
 
             <div class="first_container">
@@ -93,10 +93,12 @@
                     <li>Processing of plastic, aluminum, and brass</li>
                     <li>Proposing and implementing improvements to the production process</li>
                     <li>Responsible for training junior staff for 6 months as a team leader</li>
-                    <li>ntroducing new technologies to improve productivity</li>
+                    <li>Introducing new technologies to improve productivity</li>
                    </ul>
                 </div>
             </div>
+
+            <div class="line"></div>
         
         </div>
     </section>
