--- a/html/index.html
+++ b/html/index.html
@@ -99,6 +99,22 @@
             </div>
 
             <div class="line"></div>
+
+            <div class="first_container">
+                <div class="company">
+                    <h3>Kimura Metal</h3>
+                    <p>2016 July ~ Current</p>
+                </div>
+                <div class="company_business">
+                   <ul>
+                    <h3>Job Description:</h3>
+                    <li>Welding work for metal structures</li>
+                    <li>Recycling of copper wire</li>
+                    <li>Disassembling and reusing old computer parts</li>
+                    <li>Proposing new processes to improve work efficiency</li>
+                   </ul>
+                </div>
+            </div>
         
         </div>
     </section>
