--- a/html/index.html
+++ b/html/index.html
@@ -103,7 +103,7 @@
             <div class="first_container">
                 <div class="company">
                     <h3>Kimura Metal</h3>
-                    <p>2016 July ~ Current</p>
+                    <p>2015 February ~ 2016 June</p>
                 </div>
                 <div class="company_business">
                    <ul>
@@ -115,6 +115,8 @@
                    </ul>
                 </div>
             </div>
+
+            <div class="line"></div>
         
         </div>
     </section>
