--- a/html/index.html
+++ b/html/index.html
@@ -81,7 +81,7 @@
                 <h2>Work Experience:</h2>
             </span>
 
-            <div class="first_container">
+            <div class="container">
                 <div class="company">
                     <h3>Noda Plastic Seiko</h3>
                     <p>2016 July ~ Current</p>
@@ -100,7 +100,7 @@
 
             <div class="line"></div>
 
-            <div class="first_container">
+            <div class="container">
                 <div class="company">
                     <h3>Kimura Metal</h3>
                     <p>2015 February ~ 2016 June</p>
@@ -117,6 +117,21 @@
             </div>
 
             <div class="line"></div>
+
+            <div class="container">
+                <div class="company">
+                    <h3>Part Time Jobs</h3>
+                    <p>2011 August ~ 2015 January</p>
+                </div>
+                <div class="company_business">
+                   <ul>
+                    <h3>Job Description:</h3>
+                    <li>Pachinko company (inspection, assembly, packing)</li>
+                    <li>Biscuit factory (packing, inspection)</li>
+                    <li>Automotive parts factory (pressing, packing, inspection)</li>
+                   </ul>
+                </div>
+            </div>
         
         </div>
     </section>
