--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
             <li>Joharry Sanchez</li>
             <li><a href="#home">Home</a></li>
             <li><a href="#work">Work Experience</a></li>
-            <li><a href="">Skills</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
@@ -135,5 +135,16 @@
         
         </div>
     </section>
+
+    <div class="line"></div>
+
+    <aside id="skills">
+        <div class="skills_exp">
+            <span>
+                <h2>Skills:</h2>
+            </span>
+
+        </div>
+    </aside>
 </body>
 </html>
