--- a/html/index.html
+++ b/html/index.html
@@ -143,6 +143,25 @@
             <span>
                 <h2>Skills:</h2>
             </span>
+        <div class="aside_container">
+            <div class="prog_container">
+                <h3>Programming Language</h3>
+                    <span>
+                        <ul>
+                            <li>
+                                HTML
+                                
+                            </li>
+                            <li>CSS</li>
+                            <li>PHP</li>
+                            <li>MYSQL</li>
+                        </ul>
+                </span>
+            </div>
+            <div class="tools_container">
+                <h3>Language</h3>
+            </div>
+        </div>
 
         </div>
     </aside>
