--- a/html/index.html
+++ b/html/index.html
@@ -156,10 +156,10 @@
                             <li>PHP</li>
                             <li>MYSQL</li>
                         </ul>
-                </span>
+                    </span>
             </div>
             <div class="tools_container">
-                <h3>Language</h3>
+                <h3>Tools</h3>
             </div>
         </div>
 
