--- a/html/index.html
+++ b/html/index.html
@@ -146,20 +146,27 @@
         <div class="aside_container">
             <div class="prog_container">
                 <h3>Programming Language</h3>
-                    <span>
-                        <ul>
-                            <li>
-                                HTML
-                                
-                            </li>
-                            <li>CSS</li>
-                            <li>PHP</li>
-                            <li>MYSQL</li>
-                        </ul>
-                    </span>
+                    <div class="skill_container">
+                        <div class="skill_set">
+                            <p>HTML</p>
+                            <p>CSS</p>
+                            <p>PHP</p>
+                            <p>MySQL</p>
+                        </div>
+                        <!-- <div class="progressbar_container">
+                            <div class="progressbar">70%</div>
+                            <div class="progressbar">80%</div>
+                        </div> -->
+                    </div>
             </div>
             <div class="tools_container">
                 <h3>Tools</h3>
+                    <span>
+                        <ul>
+                            <li>Visual Studio Code</li>
+                            <li></li>
+                        </ul>
+                    </span>
             </div>
         </div>
 
