--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+     <!-- Javascript -->
+    <script src="../javascript/index_html.js"></script>
 </head>
 <body>
 
@@ -145,28 +148,42 @@
             </span>
         <div class="aside_container">
             <div class="prog_container">
-                <h3>Programming Language</h3>
+                <h3>Programming Language:</h3>
+
                     <div class="skill_container">
-                        <div class="skill_set">
-                            <p>HTML</p>
-                            <p>CSS</p>
-                            <p>PHP</p>
-                            <p>MySQL</p>
+                        <p class="skill_name">HTML</p>
+                        <div class="progressbar_container">
+                            <div class="progressbar" id="html_bar">0%</div>
                         </div>
-                        <!-- <div class="progressbar_container">
-                            <div class="progressbar">70%</div>
-                            <div class="progressbar">80%</div>
-                        </div> -->
+                    </div>
+                    <div class="skill_container">
+                        <p class="skill_name">CSS</p>
+                        <div class="progressbar_container">
+                            <div class="progressbar" id="css_bar">0%</div>
+                        </div>
+                    </div>
+                    <div class="skill_container">
+                        <p class="skill_name">PHP</p>
+                        <div class="progressbar_container">
+                            <div class="progressbar" id="php_bar">0%</div>
+                        </div>
+                    </div>
+
+                <h3>Database:</h3>
+
+                    <div class="skill_container">
+                
+                        <p class="skill_name">MySQL</p>
+                        <div class="progressbar_container">
+                            <div class="progressbar" id="mysql_bar">0%</div>
+                        </div>
                     </div>
             </div>
             <div class="tools_container">
-                <h3>Tools</h3>
-                    <span>
-                        <ul>
-                            <li>Visual Studio Code</li>
-                            <li></li>
-                        </ul>
-                    </span>
+                <h3>Tools:</h3>
+                <div class="tool_container">
+                    <p class="tool_name">Visual Studio Code</p>
+                </div>
             </div>
         </div>
 
