--- a/html/welcome.html
+++ b/html/welcome.html
@@ -19,7 +19,7 @@
                 <button type="submit">English</button>
             </form>
             <form action="jp_index.html">
-                <button type="submit">Japanese</button>
+                <button type="submit">日本語(Japanese)</button>
             </form>
         </div>
     </header>
