--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,9 @@
                     </tr>
                     <tr>
                         <td>Website:</td>
-                        <td>www.github.com</td>
+                        <td>
+                            <a href="https://github.com/jujuWork" target="_blank">Github</a>
+                        </td>
                     </tr>
                 </table>
             </div>
@@ -163,6 +165,12 @@
                         </div>
                     </div>
                     <div class="skill_container">
+                        <p class="skill_name">Javascript</p>
+                        <div class="progressbar_container">
+                            <div class="progressbar" id="js_bar">0%</div>
+                        </div>
+                    </div>
+                    <div class="skill_container">
                         <p class="skill_name">PHP</p>
                         <div class="progressbar_container">
                             <div class="progressbar" id="php_bar">0%</div>
@@ -184,10 +192,34 @@
                 <div class="tool_container">
                     <p class="tool_name">Visual Studio Code</p>
                 </div>
+                <div class="tool_container">
+                    <p class="tool_name">Github/Git</p>
+                </div>
             </div>
         </div>
 
-        </div>
+    </div>
     </aside>
+
+    <div class="line"></div>
+
+    <article id="certificate">
+        <span>
+            <h2>Certificates:</h2>
+        </span>
+        <!-- <div class="article_container">
+            <div class="article_link">
+                <h3>FreeCodeCamp</h3>
+                <a href="https://www.freecodecamp.org/certification/fcc9b66b169-c41e-47cc-a48a-a7011e85fc88/responsive-web-design" target="_blank">
+                    <img src="../upload/images/FCC_Certificate.png" alt="FCC Certificate">
+                </a>
+            </div>
+            <div class="article_link">
+                <h3>Future Academy</h3>
+                <a href=""></a>
+            </div>
+        </div> -->
+    </article>
+
 </body>
 </html>
