--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#work">Work Experience</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#certificate">Certificates</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
@@ -204,21 +205,26 @@
     <div class="line"></div>
 
     <article id="certificate">
-        <span>
-            <h2>Certificates:</h2>
-        </span>
-        <!-- <div class="article_container">
-            <div class="article_link">
-                <h3>FreeCodeCamp</h3>
-                <a href="https://www.freecodecamp.org/certification/fcc9b66b169-c41e-47cc-a48a-a7011e85fc88/responsive-web-design" target="_blank">
-                    <img src="../upload/images/FCC_Certificate.png" alt="FCC Certificate">
-                </a>
+        <div class="article_container">
+            <div class="article_title">
+                <h2>Certificates:</h2>
             </div>
-            <div class="article_link">
-                <h3>Future Academy</h3>
-                <a href=""></a>
+            <div class="article_content">
+                <div class="article_content_title">
+                    <h3>FreeCodeCamp</h3>
+                        <a href="https://www.freecodecamp.org/certification/fcc9b66b169-c41e-47cc-a48a-a7011e85fc88/responsive-web-design">
+                            <img src="../upload/images/FCC_Certificate.png" alt="FreeCodeCamp">
+                        </a>
+                </div>
+                <div class="article_content_title">
+                    <h3>Mirai Juku</h3>
+                        <a href="https://lienschool.com/">link
+                            
+                        </a>
+                </div>
             </div>
-        </div> -->
+        </div>
+
     </article>
 
 </body>
