--- a/html/index.html
+++ b/html/index.html
@@ -218,12 +218,16 @@
                 </div>
                 <div class="article_content_title">
                     <h3>Mirai Juku</h3>
-                        <a href="https://lienschool.com/">link
-                            
+                        <a href="https://lienschool.com/">
+                            <img src="" alt="">waiting...
                         </a>
                 </div>
             </div>
         </div>
+
+    </article>
+
+    <article id="works">
 
     </article>
 
