--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,7 @@
             <li><a href="#work">Work Experience</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#certificate">Certificates</a></li>
+            <li><a href="#works">Works</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
