--- a/html/index.html
+++ b/html/index.html
@@ -189,15 +189,34 @@
                         </div>
                     </div>
             </div>
-            <div class="tools_container">
-                <h3>Tools:</h3>
-                <div class="tool_container">
-                    <p class="tool_name">Visual Studio Code</p>
-                </div>
-                <div class="tool_container">
-                    <p class="tool_name">Github/Git</p>
-                </div>
-            </div>
+
+                <div class="prog_container">
+                    <h3>Language:</h3>
+    
+                        <div class="skill_container">
+                            <p class="skill_name">Bisaya</p>
+                            <div class="progressbar_container">
+                                <div class="progressbar" id="bisaya_bar">0%</div>
+                            </div>
+                        </div>
+                        <div class="skill_container">
+                            <p class="skill_name">Tagalog</p>
+                            <div class="progressbar_container">
+                                <div class="progressbar" id="tagalog_bar">0%</div>
+                            </div>
+                        </div>
+                        <div class="skill_container">
+                            <p class="skill_name">English</p>
+                            <div class="progressbar_container">
+                                <div class="progressbar" id="english_bar">0%</div>
+                            </div>
+                        </div>
+                        <div class="skill_container">
+                            <p class="skill_name">Japanese</p>
+                            <div class="progressbar_container">
+                                <div class="progressbar" id="japanese_bar">0%</div>
+                            </div>
+                        </div>
         </div>
 
     </div>
@@ -229,7 +248,7 @@
     </article>
 
     <article id="works">
-
+        
     </article>
 
 </body>
