--- a/html/index.html
+++ b/html/index.html
@@ -246,9 +246,11 @@
         </div>
 
     </article>
+    
+    <div class="line"></div>
 
     <article id="works">
-        
+        Works
     </article>
 
 </body>
