--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#certificate">Certificates</a></li>
             <li><a href="#works">Works</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -232,13 +232,13 @@
             <div class="article_content">
                 <div class="article_content_title">
                     <h3>FreeCodeCamp</h3>
-                        <a href="https://www.freecodecamp.org/certification/fcc9b66b169-c41e-47cc-a48a-a7011e85fc88/responsive-web-design">
+                        <a href="https://www.freecodecamp.org/certification/fcc9b66b169-c41e-47cc-a48a-a7011e85fc88/responsive-web-design" target="_blank">
                             <img src="../upload/images/FCC_Certificate.png" alt="FreeCodeCamp">
                         </a>
                 </div>
                 <div class="article_content_title">
                     <h3>Mirai Juku</h3>
-                        <a href="https://lienschool.com/">
+                        <a href="https://lienschool.com/" target="_blank">
                             <img src="" alt="">waiting...
                         </a>
                 </div>
@@ -252,6 +252,29 @@
     <article id="works">
         Works
     </article>
+
+    <div class="line"></div>
+
+    <footer id="contact">
+        <div class="contact_container">
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <img src="../upload/images/call.png" alt="call">
+                    <p>090-9923-3642</p>
+                </div>
+            </div>
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <img src="../upload/images/call.png" alt="call">
+                    <p>Aichi, Japan</p>
+                </div>
+            </div>
+            <div class="contact_list">email</div>
+            <div class="contact_list">linkedin</div>
+            <div class="contact_list">facebook</div>
+            <div class="contact_list">instagram</div>
+        </div>
+    </footer>
 
 </body>
 </html>
