--- a/html/index.html
+++ b/html/index.html
@@ -265,14 +265,34 @@
             </div>
             <div class="contact_list">
                 <div class="contact_list_info">
-                    <img src="../upload/images/call.png" alt="call">
+                    <img src="../upload/images/location.png" alt="call">
                     <p>Aichi, Japan</p>
                 </div>
             </div>
-            <div class="contact_list">email</div>
-            <div class="contact_list">linkedin</div>
-            <div class="contact_list">facebook</div>
-            <div class="contact_list">instagram</div>
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <img src="../upload/images/email.png" alt="call">
+                    <p>joharrywork@gmail.com</p>
+                </div>
+            </div>
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <img src="../upload/images/linkedin.png" alt="call">
+                    <p>LinkedIn</p>
+                </div>
+            </div>
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <img src="../upload/images/facebook.png" alt="call">
+                    <p>Facebook</p>
+                </div>
+            </div>
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <img src="../upload/images/instagram.png" alt="call">
+                    <p>Instagram</p>
+                </div>
+            </div>
         </div>
     </footer>
 
