--- a/html/index.html
+++ b/html/index.html
@@ -265,34 +265,47 @@
             </div>
             <div class="contact_list">
                 <div class="contact_list_info">
-                    <img src="../upload/images/location.png" alt="call">
-                    <p>Aichi, Japan</p>
+                    <a href="">
+                        <img src="../upload/images/location.png" alt="location">
+                        <p>Aichi, Japan</p>
+                    </a>
                 </div>
             </div>
             <div class="contact_list">
                 <div class="contact_list_info">
-                    <img src="../upload/images/email.png" alt="call">
-                    <p>joharrywork@gmail.com</p>
+                    <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">
+                        <img src="../upload/images/email.png" alt="email">
+                        <p>joharrywork@gmail.com</p>
+                    </a>
                 </div>
             </div>
             <div class="contact_list">
                 <div class="contact_list_info">
-                    <img src="../upload/images/linkedin.png" alt="call">
-                    <p>LinkedIn</p>
+                    <a href="https://www.linkedin.com/in/jujuwork/" target="_blank">
+                        <img src="../upload/images/linkedin.png" alt="linkedin">
+                        <p>LinkedIn</p>
+                    </a>
                 </div>
             </div>
             <div class="contact_list">
                 <div class="contact_list_info">
-                    <img src="../upload/images/facebook.png" alt="call">
-                    <p>Facebook</p>
+                    <a href="https://www.facebook.com/jujuwork1024/" target="_blank">
+                        <img src="../upload/images/facebook.png" alt="facebook">
+                        <p>Facebook</p>
+                    </a>
                 </div>
             </div>
             <div class="contact_list">
                 <div class="contact_list_info">
-                    <img src="../upload/images/instagram.png" alt="call">
-                    <p>Instagram</p>
+                    <a href="https://www.instagram.com/bb8juju/" target="_blank">
+                        <img src="../upload/images/instagram.png" alt="instagram">
+                        <p>Instagram</p>
+                    </a>
                 </div>
             </div>
+        </div>
+        <div class="contact_name">
+            Sanchez Joharry
         </div>
     </footer>
 
