--- a/html/index.html
+++ b/html/index.html
@@ -304,8 +304,16 @@
                 </div>
             </div>
         </div>
-        <div class="contact_name">
-            Sanchez Joharry
+        <div class="send_to_email">
+            <form action="send_to_email.php" method="post" enctype="multipart/form-data">
+                <div class="STE_info">
+                    info
+                </div>
+                <div class="STE_textarea">
+                    textarea
+                </div>
+            </form>
+
         </div>
     </footer>
 
