--- a/html/index.html
+++ b/html/index.html
@@ -304,16 +304,17 @@
                 </div>
             </div>
         </div>
-        <div class="send_to_email">
+        <div class="send_to_email"> 
             <form action="send_to_email.php" method="post" enctype="multipart/form-data">
                 <div class="STE_info">
-                    info
+                    <input type="text" name="name" placeholder="Name:">
+                    <input type="email" name="email" placeholder="Email:">
+                    <input type="text" name="subject" placeholder="Subject:">
                 </div>
                 <div class="STE_textarea">
-                    textarea
+                    <textarea name="message" placeholder="Message" cols=""></textarea>
                 </div>
             </form>
-
         </div>
     </footer>
 
