--- a/html/index.html
+++ b/html/index.html
@@ -305,7 +305,7 @@
             </div>
         </div>
         <div class="send_to_email"> 
-            <form action="send_to_email.php" method="post" enctype="multipart/form-data">
+            <form action="../send_to_email.php" method="post" enctype="multipart/form-data">
                 <div class="STE_info">
                     <input type="text" name="name" placeholder="Name:">
                     <input type="email" name="email" placeholder="Email:">
