--- a/html/index.html
+++ b/html/index.html
@@ -314,7 +314,7 @@
                 <div class="STE_textarea">
                     <textarea name="message" placeholder="Message" cols=""></textarea>
                 </div>
-                <button type="submit">Send Message</button>
+                <button type="submit">Send</button>
             </form>
         </div>
     </footer>
