--- a/html/index.html
+++ b/html/index.html
@@ -304,7 +304,7 @@
                 </div>
             </div>
         </div>
-        <div class="send_to_email"> 
+        <!-- <div class="send_to_email"> 
             <form action="../send_to_email.php" method="post" enctype="multipart/form-data">
                 <div class="STE_info">
                     <input type="text" name="name" placeholder="Name:">
@@ -312,11 +312,11 @@
                     <input type="text" name="subject" placeholder="Subject:">
                 </div>
                 <div class="STE_textarea">
-                    <textarea name="message" placeholder="Message" cols=""></textarea>
+                    <textarea name="message" placeholder="Message"></textarea>
                 </div>
                 <button type="submit">Send</button>
             </form>
-        </div>
+        </div> -->
     </footer>
 
 </body>
